fixing contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -141,7 +141,8 @@ footer {
     border: 2px solid #40798C;
     margin-top: 10px;
     color: var(--primary-color);
-    font-weight: 600;
+    font-weight: 700;
+    font-size: large;
 }
 
 footer nav {
